--- a/ManualPlanning/Resources/UI/ManualPlanning.ui
+++ b/ManualPlanning/Resources/UI/ManualPlanning.ui
@@ -54,6 +54,12 @@
       </item>
       <item row="3" column="1">
        <widget class="QSlider" name="horizontalSlider">
+        <property name="minimum">
+         <number>-15</number>
+        </property>
+        <property name="maximum">
+         <number>15</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -68,6 +74,12 @@
       </item>
       <item row="4" column="1">
        <widget class="QSlider" name="horizontalSlider_2">
+        <property name="minimum">
+         <number>-15</number>
+        </property>
+        <property name="maximum">
+         <number>15</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
@@ -95,32 +107,42 @@
         </column>
        </widget>
       </item>
+      <item row="5" column="1">
+       <widget class="QPushButton" name="calculateButton">
+        <property name="text">
+         <string>Calculate holes and depth</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="ctkCollapsibleButton" name="advancedCollapsibleButton">
-     <property name="text">
-      <string>Advanced</string>
-     </property>
-     <property name="collapsed">
+     <property name="enabled">
       <bool>true</bool>
      </property>
+     <property name="text">
+      <string>Visualization</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+     <property name="collapsed">
+      <bool>false</bool>
+     </property>
      <layout class="QFormLayout" name="formLayout_3">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_4">
+      <item row="2" column="0">
+       <widget class="QCheckBox" name="IceballcheckBox">
         <property name="text">
-         <string>Show iceball: </string>
+         <string>Show Iceball</string>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QCheckBox" name="invertOutputCheckBox">
-        <property name="toolTip">
-         <string>If checked, values above threshold are set to 0. If unchecked, values below are set to 0.</string>
-        </property>
+      <item row="3" column="0">
+       <widget class="QCheckBox" name="templatecheckBox">
         <property name="text">
-         <string/>
+         <string>Show Template</string>
         </property>
        </widget>
       </item>
