--- a/CryoControl/Resources/UI/CryoControl.ui
+++ b/CryoControl/Resources/UI/CryoControl.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>766</height>
+    <width>442</width>
+    <height>760</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -47,7 +47,7 @@
        <rect>
         <x>240</x>
         <y>60</y>
-        <width>241</width>
+        <width>151</width>
         <height>21</height>
        </rect>
       </property>
@@ -69,7 +69,7 @@
        <rect>
         <x>110</x>
         <y>30</y>
-        <width>371</width>
+        <width>281</width>
         <height>23</height>
        </rect>
       </property>
@@ -222,7 +222,7 @@
        <rect>
         <x>0</x>
         <y>30</y>
-        <width>201</width>
+        <width>131</width>
         <height>23</height>
        </rect>
       </property>
@@ -248,9 +248,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>210</x>
+        <x>140</x>
         <y>30</y>
-        <width>121</width>
+        <width>101</width>
         <height>23</height>
        </rect>
       </property>
@@ -3109,9 +3109,9 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>340</x>
+        <x>250</x>
         <y>30</y>
-        <width>121</width>
+        <width>81</width>
         <height>23</height>
        </rect>
       </property>
@@ -3123,6 +3123,28 @@
       </property>
       <property name="text">
        <string>MOVE</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="reconnectButton">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>340</x>
+        <y>30</y>
+        <width>81</width>
+        <height>23</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>reconnect</string>
       </property>
      </widget>
     </widget>
